# nice-game

./: .gitignore  Cargo.toml  LICENSE  README.md  RenderDoc.cap  renderdoc.cap
capi/: Cargo.toml
capi/src/: lib.rs
examples/assets/: de_rebelzone.nmd
examples/mesh/: Cargo.toml
examples/mesh/src/: main.rs
examples/sprite/: Cargo.toml
examples/sprite/src/: main.rs
examples/target_texture/: Cargo.toml
examples/target_texture/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs  mesh.rs
src/: batch.rs  camera.rs  cpu_pool.rs  device.rs  event.rs  lib.rs  mesh.rs  sprite.rs  texture.rs  window.rs
src/batch/: mesh.rs  sprite.rs
src/batch/mesh/: mesh.rs  mesh_batch.rs  mod.rs  postprocessor.rs  render_pass.rs  render_passes.rs  shaders.rs  shared.rs
src/batch/mesh/mesh/: codec.rs  mod.rs
src/batch/sprite/: font.rs  mod.rs  shaders.rs  shared.rs  sprite.rs
src/codec/: obj.rs
src/texture/: immutable.rs  mod.rs  target.rs
