[package]
name = "nice-game"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true

[dependencies]
atom = "0.3"
byteorder = "1.2"
cgmath = { version = "0.16", features = ["swizzle"] }
futures-preview = "0.2"
image = "0.19"
lazy_static = "1.0"
log = "0.4"
num_cpus = "1.8"
vulkano = "0.9"
vulkano-shader-derive = "0.9"
vulkano-win = "0.9"
winit = "0.11"

[workspace]
members = [
	"examples/mesh",
	"examples/sprite",
	"examples/target_texture"
]
