[package]
name = "nice-game"
version = "0.1.0"
authors = [
	"IcyDefiance <icydefiance@gmail.com>",
	"Mick Lionheart <micklionheart@gmail.com>"
]

[profile.release]
lto = true

[dependencies]
atom = "0.3"
byteorder = "1.2"
cgmath = { version = "0.16", features = ["swizzle"] }
futures-preview = "0.2"
image = "0.19"
lazy_static = "1.0"
log = "0.4"
num_cpus = "1.8"
rusttype = "0.6"
vulkano = "0.10"
vulkano-shader-derive = "0.10"
vulkano-win = "0.10"
winit = "0.17"

[workspace]
members = [
	"examples/mesh",
	"examples/sprite",
	"examples/target_texture"
]
